# IOA_semestralka

./: CMakeLists.txt  README.md  main.cpp
fStar/: Alg.cpp  Alg.hpp  Loader.cpp  Loader.hpp  Loader.tpp  NodeAllocator.cpp  NodeAllocator.hpp  fStar.cpp  fStar.hpp  fStar.tpp
gui/: Transformer.cpp  Transformer.h  Transformer.hpp  controler.h  gui.cpp  gui.hpp
